Fixed up flickering typist cycle

--- a/src/assets/stylesheets/config/global.scss
+++ b/src/assets/stylesheets/config/global.scss
@@ -31,6 +31,7 @@ h1 {
 
   @include mobile {
     font-size: 3em;
+    white-space: nowrap;
   }
 }
 
